@@ -88,6 +88,8 @@ eglibc (2.13-0exp1) experimental; urgency=low
     NIS installations.  Closes: #566297, #566844.
   * kfreebsd/local-sysdeps.diff: update to revision 3251 (from glibc-bsd)
     Closes: ##602776.
+  * debian/rules: split build-indep and build-arch targets.  Closes: 
+    #611926.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 06 Feb 2011 16:52:51 +0100
 
